--- a/frontend-angular/src/app/app.component.html
+++ b/frontend-angular/src/app/app.component.html
@@ -1,8 +1,4 @@
 <div class="page-wrapper">
-    <mat-toolbar color="primary">
-        <span class="menu-item">Karatê-DÔ Tradicional do Piauí</span>
-        <span><a [routerLink]="['/profiles']" class="menu-item">Fichas</a></span>
-        <span><a [routerLink]="['/tournaments']" class="menu-item">Torneios</a></span>
-    </mat-toolbar>
+    <app-header></app-header>
     <router-outlet></router-outlet>
 </div>
