--- a/frontend-angular/src/app/components/tournaments-list/tournaments-list.component.html
+++ b/frontend-angular/src/app/components/tournaments-list/tournaments-list.component.html
@@ -23,7 +23,7 @@
 
             <ng-container matColumnDef="numberOfParticipants">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header> Quantidade de participantes </th>
-                <td mat-cell *matCellDef="let row"> {{row.numberOfParticipants}} </td>
+                <td mat-cell *matCellDef="let row"> {{row.participants.length}} </td>
             </ng-container>
 
             <ng-container matColumnDef="eventDate">
@@ -34,6 +34,26 @@
             <ng-container matColumnDef="eventTime">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header> Horário de início </th>
                 <td mat-cell *matCellDef="let row"> {{row.eventDateTime | date: 'hh:mm'}} </td>
+            </ng-container>
+            
+            <ng-container matColumnDef="actions">
+                <th mat-header-cell *matHeaderCellDef></th>
+                <td mat-cell *matCellDef="let element">
+                    <div *ngIf="isLoggedUserParticipating(element.participants)">
+                        <mat-icon matTooltip="Desinscrever-se deste torneio" (click)="openParticipationInTournament(element.id)">
+                            <span class="material-symbols-outlined">
+                                cancel
+                            </span>
+                        </mat-icon>
+                    </div>
+                    <div *ngIf="!isLoggedUserParticipating(element.participants)">
+                        <mat-icon matTooltip="Inscrever-se neste torneio" (click)="openParticipationInTournament(element.id)">
+                            <span class="material-symbols-outlined">
+                                add_circle
+                            </span>
+                        </mat-icon>
+                    </div>
+                </td>
             </ng-container>
 
             <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
