--- a/frontend-angular/src/app/components/profile-list/profile-list.component.html
+++ b/frontend-angular/src/app/components/profile-list/profile-list.component.html
@@ -79,21 +79,21 @@
       <ng-container matColumnDef="actions">
         <th mat-header-cell *matHeaderCellDef></th>
         <td mat-cell *matCellDef="let element">
-        <a [routerLink]="['/profile/update', element.id]"
-          ><mat-icon
-          aria-hidden="false"
-          aria-label="Example home icon"
-          fontIcon="edit"
+          <a [routerLink]="['/profiles/update', element.id]"
+            ><mat-icon
+            aria-hidden="false"
+            aria-label="Example home icon"
+            fontIcon="edit"
+            >
+            </mat-icon
+          ></a>
+          <mat-icon
+            (click)="openDeleteModal(element.id)"
+            aria-hidden="false"
+            aria-label="Example delete icon"
+            fontIcon="delete"
           >
-          </mat-icon
-        ></a>
-        <mat-icon
-          (click)="openDeleteModal(element.id)"
-          aria-hidden="false"
-          aria-label="Example delete icon"
-          fontIcon="delete"
-        >
-        </mat-icon>
+          </mat-icon>
         </td>
       </ng-container>
   
