--- a/frontend-angular/src/app/components/header/header.component.html
+++ b/frontend-angular/src/app/components/header/header.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
     <div class="container-fluid">
-        <a class="navbar-brand" href="#">Karatê-DÔ Tradicional do Piauí</a>
+        <a class="navbar-brand" [routerLink]="['/landing']">Karatê-DÔ Tradicional do Piauí</a>
 
         <button  *ngIf="currentUserSignal()" class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
